--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="smd.png" alt="Rohan profile picture" />
+        <img src="smd.png" alt="SMD" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello , I'm</p>
         <h1 class="title">Thousif ibrahim</h1>
-        <p class="section__text__p11">  Web developer | Data Analyst | UI/UX & Graphic designer . <br><br> I specialize in Business Intelligence , ETL and Data modeling. Explore my portfolio to see my work and learn more about my projects and skills. </p>
+        <p class="section__text__p11">  Web developer | Data Analyst | UI/UX . <br><br> I specialize in Business Intelligence , ETL and Data modeling. Explore my portfolio to see my work and learn more about my projects and skills. </p>
         <br>
           <!----> 
 
@@ -118,7 +118,7 @@
                 class="icon"
               />
               <h3>Skills</h3>
-              <p> HTML5, CSS, Python ,Php , Springboard , SQL, Github , MangodB(CRUD), Power Bi , Tabluea and R PL OOP's </p>
+              <p> HTML5, CSS, Python ,Php , Django , SQL, Git, MangodB(CRUD), Power Bi , Tabluea </p>
           </div>
           </div>
         </div>
