--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <p class="section__text__p1">Know More</p>
       <h1 class="title">About Me : </h1>
       <br>
-      <p class="section__text__p1">Passionate IT professional with expertise in ETL
+      <p class="section__text__p1">Passionate IT professional with expertise in development,
         Data modeling, Data analytics and business Intelligence. Proficient
         in a range of industry-leading software tools. </p> <br>
       <div class="section-container">
@@ -118,7 +118,7 @@
                 class="icon"
               />
               <h3>Skills</h3>
-              <p> HTML5, CSS, Python ,Php , Django , SQL, Git, MangodB(CRUD), Power Bi , Tabluea </p>
+              <p> HTML5, CSS, Js , Python , Django , Git,  SQL , MangodB(CRUD) , Power Bi , Tabluea </p>
           </div>
           </div>
         </div>
